# INSA-4IF-lutin-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md
Tests/: ._mktest.sh  lut
demos/: demo-analyse-statique.fic  demo-erreur-fin.fic  demo-execution-normale.fic  demo-optimisation.fic  demo-rattrapage-erreurs.fic  demo-symbols-inconnus.fic
diagrams/: variables.puml
diagrams-simplified/: skin.puml  variables.puml
doc/: .gitignore  Makefile  preambule.tex  rapport.tex  title.tex
lib/: libboost_regex.so.1.60.0
programs/: example.lt
scripts/: filesnames.py  generateStates.py
src/: Automaton.cpp  Automaton.h  IActiveSymbol.h  Lexer.cpp  Lexer.h  StructVar.h  SymbolDeclaration.cpp  SymbolDeclaration.h  SymbolDeclarationConst.cpp  SymbolDeclarationConst.h  SymbolDeclarationVar.cpp  SymbolDeclarationVar.h  SymbolExpression.cpp  SymbolExpression.h  SymbolExpressionBinary.cpp  SymbolExpressionBinary.h  SymbolExpressionBinaryAdd.cpp  SymbolExpressionBinaryAdd.h  SymbolExpressionBinaryDivision.cpp  SymbolExpressionBinaryDivision.h  SymbolExpressionBinaryMultiplication.cpp  SymbolExpressionBinaryMultiplication.h  SymbolExpressionBinarySoustract.cpp  SymbolExpressionBinarySoustract.h  SymbolExpressionParenthesis.cpp  SymbolExpressionParenthesis.h  SymbolInstruction.cpp  SymbolInstruction.h  SymbolInstructionAffect.cpp  SymbolInstructionAffect.h  SymbolInstructionRead.cpp  SymbolInstructionRead.h  SymbolInstructionWrite.cpp  SymbolInstructionWrite.h  SymbolInstructionwWrite.cpp  SymbolInstructionwWrite.h  SymbolNumber.cpp  SymbolNumber.h  SymbolVariable.cpp  SymbolVariable.h  (+14 more)
tests/: mktest.sh  test.sh
(+235 files in other folders)
